examples/datalog/18_advanced_patterns/12_all_features_stress.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_all_features
Knowledge graph 'test_all_features' created.
Switched to knowledge graph: test_all_features
> .kg use test_all_features
Switched to knowledge graph: test_all_features
> +link[(1, 2, 10), (2, 3, 20), (3, 4, 15), (4, 5, 25), (1, 3, 35), (2, 4, 30), (3, 5, 40), (1, 5, 100)].
Inserted 8 fact(s) into 'link'.
> +blocked[(3, 5), (1, 5)].
Inserted 2 fact(s) into 'blocked'.
> +active_link(X, Y, C) :- link(X, Y, C), !blocked(X, Y).
Rule 'active_link' registered.
> ?- active_link(X, Y, C).
6 rows:
  (1, 2, 10)
  (1, 3, 35)
  (2, 3, 20)
  (2, 4, 30)
  (3, 4, 15)
  (4, 5, 25)
> +path_cost(X, Y, C) :- active_link(X, Y, C).
Rule 'path_cost' registered.
> +path_cost(X, Z, C1+C2) :- path_cost(X, Y, C1), active_link(Y, Z, C2).
Script error: Parse error: Invalid term: 'C1+C2'
